--- a/AngularFrontEnd/projects/features/src/app/admin-product/admin-product.component.html
+++ b/AngularFrontEnd/projects/features/src/app/admin-product/admin-product.component.html
@@ -1,58 +1,60 @@
-<button pButton icon="pi pi-caret-left" label="Back To Admin Category" class="p-button-sm p-button-raised p-button-rounded p-button-secondary back-button" routerLink="/admin/admin-category"></button>
-<button pButton icon="pi pi-calendar-plus" label="Create" class="p-button-sm p-button-raised p-button-rounded p-button-help create-button" 
-    [routerLink]="['./create-product']" [state]="{existedCategoryId: existedCategoryId}"></button>
-<p-accordion>
-    <p-accordionTab header="Product Manages of {{categoryName}} category" class="center" [selected]="true">
-        <div class="search-box">
-            <input pTooltip="Global Seach" tooltipPosition="bottom" type="text" pInputText placeholder="Search" 
-            matInput (input)="tdt.filterGlobal($any($event.target).value, 'contains')"/>
-        </div>  
-        <div class="displayUsers">
-            <p-table #tdt [value]="dataProducts" [columns]="productsDataCols" responsiveLayout="scroll" class="table-content" [paginator]="true" [rows]="rows"
-                [virtualRowHeight]="340" [paginator]="true" [showCurrentPageReport]="true" [(first)]="first"
-                [resizableColumns]="true" [reorderableColumns]="true" [columnResizeMode]="'expand'"
-                [globalFilterFields]="['id','productName','price','discount','description','soldQuantity']"
-                [rowsPerPageOptions]="[5, 10, 20]"
-                currentPageReportTemplate="Hiển thị {first} - {last} trong tổng số {totalRecords} dữ liệu">
-                <ng-template pTemplate="header" let-columns>
-                    <tr>
-                        <th pReorderableColumn pResizableColumn *ngFor="let col of columns"
-                            [style.width]="col.width + '%'">
-                            <span>{{ col.header }}</span>
-                        </th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-columns="columns" let-rowIndex="rowIndex" let-rowData>
-                    <tr [pSelectableRow]="rowData" [pSelectableRowIndex]="rowIndex">
-                        <td *ngFor="let col of columns">
-                        <span [ngSwitch]="col.type">
-                            <span *ngSwitchCase="'button'" class="button"> 
-                                <td>
-                                    <button pButton icon="pi pi-pencil" pTooltip="Edit Product" tooltipPosition="bottom" class="p-button-rounded p-button-success mr-2"
-                                        [routerLink]="['./edit-product', rowData['id']]"></button>      
-                                    <button pButton icon="pi pi-lock" [pTooltip]="rowData.isActive ? 'InActive':'Active'" tooltipPosition="bottom" (click)="inActiveProduct(rowData)"
-                                    [ngClass]="rowData.isActive ? 'p-button-rounded p-button-danger mr-2' : 'p-button-rounded p-button-info mr-2'"  
-                                   ></button>
-                                </td> 
-                            </span>
-                            <span *ngSwitchCase="'image'">
-                                <img [src]="createImgPath(rowData[col.field])" alt="product picture" class="productImage">  
-                            </span>  
-                            <span *ngSwitchCase="'money'" pTooltip="{{rowData[col.field] | number}}" tooltipPosition="bottom">{{ rowData[col.field] | number }}</span> 
-                            <span *ngSwitchCase="'percent'" pTooltip="{{rowData[col.field]}}%" tooltipPosition="bottom">{{ rowData[col.field] }}%</span> 
-                            <span *ngSwitchCase="'date'" pTooltip="{{rowData[col.field] | date: 'hh:mm:ss a, dd/MM/yyyy'}}" tooltipPosition="bottom">{{ rowData[col.field] | date: 'hh:mm:ss a, dd/MM/yyyy' }}</span> 
-                            <span *ngSwitchDefault pTooltip="{{rowData[col.field]}}" tooltipPosition="bottom">{{ rowData[col.field] }}</span> 
-                        </span>                   
-                        </td>
-                    </tr>
-                </ng-template>
-                
-                <ng-template pTemplate="emptymessage">
-                    <tr>
-                        <td colspan="13">No data found.</td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </div>
-        </p-accordionTab>
-</p-accordion>
+<div class="block">
+    <button pButton icon="pi pi-caret-left" label="Trở về danh mục" class="p-button-sm p-button-raised p-button-rounded p-button-secondary mb-3 mr-3" routerLink="/admin/admin-category"></button>
+    <button pButton icon="pi pi-calendar-plus" label="Tạo sản phẩm" class="p-button-sm p-button-raised p-button-rounded p-button-help mb-3" 
+        [routerLink]="['./create-product']" [state]="{existedCategoryId: existedCategoryId}"></button>
+    <p-accordion>
+        <p-accordionTab header="Sản phẩm của danh mục{{categoryName}}" class="center" [selected]="true">
+            <div class="search-box">
+                <input pTooltip="Global Seach" tooltipPosition="bottom" type="text" pInputText placeholder="Search" 
+                matInput (input)="tdt.filterGlobal($any($event.target).value, 'contains')"/>
+            </div>  
+            <div class="displayUsers">
+                <p-table #tdt [value]="dataProducts" [columns]="productsDataCols" responsiveLayout="scroll" class="table-content" [paginator]="true" [rows]="rows"
+                    [virtualRowHeight]="340" [paginator]="true" [showCurrentPageReport]="true" [(first)]="first"
+                    [resizableColumns]="true" [reorderableColumns]="true" [columnResizeMode]="'expand'"
+                    [globalFilterFields]="['id','productName','price','discount','description','soldQuantity']"
+                    [rowsPerPageOptions]="[5, 10, 20]"
+                    currentPageReportTemplate="Hiển thị {first} - {last} trong tổng số {totalRecords} dữ liệu">
+                    <ng-template pTemplate="header" let-columns>
+                        <tr>
+                            <th pReorderableColumn pResizableColumn *ngFor="let col of columns"
+                                [style.width]="col.width + '%'">
+                                <span>{{ col.header }}</span>
+                            </th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-columns="columns" let-rowIndex="rowIndex" let-rowData>
+                        <tr [pSelectableRow]="rowData" [pSelectableRowIndex]="rowIndex">
+                            <td *ngFor="let col of columns">
+                            <span [ngSwitch]="col.type">
+                                <span *ngSwitchCase="'button'" class="button"> 
+                                    <td>
+                                        <button pButton icon="pi pi-pencil" pTooltip="Chỉnh sửa" tooltipPosition="bottom" class="p-button-rounded p-button-success mr-2"
+                                            [routerLink]="['./edit-product', rowData['id']]"></button>      
+                                        <button pButton icon="pi pi-lock" [pTooltip]="rowData.isActive ? 'Ẩn':'Hiện'" tooltipPosition="bottom" (click)="inActiveProduct(rowData)"
+                                        [ngClass]="rowData.isActive ? 'p-button-rounded p-button-danger mr-2' : 'p-button-rounded p-button-info mr-2'"  
+                                       ></button>
+                                    </td> 
+                                </span>
+                                <span *ngSwitchCase="'image'">
+                                    <img [src]="createImgPath(rowData[col.field])" alt="product picture" class="productImage">  
+                                </span>  
+                                <span *ngSwitchCase="'money'" pTooltip="{{rowData[col.field] | number}}" tooltipPosition="bottom">{{ rowData[col.field] | number }}</span> 
+                                <span *ngSwitchCase="'percent'" pTooltip="{{rowData[col.field]}}%" tooltipPosition="bottom">{{ rowData[col.field] }}%</span> 
+                                <span *ngSwitchCase="'date'" pTooltip="{{rowData[col.field] | date: 'hh:mm:ss a, dd/MM/yyyy'}}" tooltipPosition="bottom">{{ rowData[col.field] | date: 'hh:mm:ss a, dd/MM/yyyy' }}</span> 
+                                <span *ngSwitchDefault pTooltip="{{rowData[col.field]}}" tooltipPosition="bottom">{{ rowData[col.field] }}</span> 
+                            </span>                   
+                            </td>
+                        </tr>
+                    </ng-template>
+                    
+                    <ng-template pTemplate="emptymessage">
+                        <tr>
+                            <td colspan="13">No data found.</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </div>
+            </p-accordionTab>
+    </p-accordion>
+</div>
