--- a/AngularFrontEnd/projects/features/src/app/home-page/home-page.component.scss
+++ b/AngularFrontEnd/projects/features/src/app/home-page/home-page.component.scss
@@ -1,6 +1,6 @@
 .main {
   background-color: #f0f3f8;
-  padding: 1rem 7rem 0.1rem 7rem;
+  padding: 1rem 6% 0.1rem 6%;
 }
 .card {
   background: white;
