--- a/AngularFrontEnd/projects/features/src/app/order/listOrder/listOrder.component.html
+++ b/AngularFrontEnd/projects/features/src/app/order/listOrder/listOrder.component.html
@@ -1,8 +1,7 @@
 <p-table
   [value]="orders"
   [tableStyle]="{ 'min-width': '60rem' }"
-  [loading]="loading"
->
+  [loading]="loading">
   <ng-template pTemplate="header">
     <tr>
       <th>Số sản phẩm</th>
