--- a/AngularFrontEnd/projects/features/src/app/admin-brand/admin-brand.component.html
+++ b/AngularFrontEnd/projects/features/src/app/admin-brand/admin-brand.component.html
@@ -1,92 +1,94 @@
-<button pButton icon="pi pi-calendar-plus" label="Tạo" class="p-button-sm p-button-raised p-button-rounded p-button-help create-button" 
+<div class="block">
+    <button pButton icon="pi pi-calendar-plus" label="Tạo nhãn hàng" class="p-button-sm p-button-raised p-button-rounded p-button-help mb-3" 
     (click)="openCreateCategoryPopup()"></button>
-<p-accordion>
-    <p-accordionTab header="Quản lý nhãn hàng" class="center" [selected]="true">
-        <div class="search-box">
-            <input pTooltip="Global Seach" tooltipPosition="bottom" type="text" pInputText placeholder="Tìm kiếm" 
-            matInput (input)="tdt.filterGlobal($any($event.target).value, 'contains')"/>
-        </div>  
-        <div class="displayUsers">
-            <p-table #tdt [value]="dataBrand" [columns]="brandsDataCols" responsiveLayout="scroll" class="table-content" [paginator]="true" [rows]="rows"
-                [virtualRowHeight]="340" [paginator]="true" [showCurrentPageReport]="true" [(first)]="first"
-                [resizableColumns]="true" [reorderableColumns]="true" [columnResizeMode]="'expand'"
-                [globalFilterFields]="['id','brandName','description','isActive']"
-                [rowsPerPageOptions]="[5, 10, 20]"
-                currentPageReportTemplate="Hiển thị {first} - {last} trong tổng số {totalRecords} dữ liệu">
-                <ng-template pTemplate="header" let-columns>
-                    <tr>
-                        <th pReorderableColumn pResizableColumn *ngFor="let col of columns"
-                            [style.width]="col.width + '%'">
-                            <span>{{ col.header }}</span>
-                        </th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-columns="columns" let-rowIndex="rowIndex" let-rowData>
-                    <tr [pSelectableRow]="rowData" [pSelectableRowIndex]="rowIndex">
-                        <td *ngFor="let col of columns">
-                        <span [ngSwitch]="col.type">
-                            <span *ngSwitchCase="'button'" class="button"> 
-                                <td>
-                                    <button pButton icon="pi pi-pencil" pTooltip="Chỉnh sửa" tooltipPosition="bottom" class="p-button-rounded p-button-success mr-2"
-                                        (click)="openEditBrandPopup(rowData['id'])"></button>        
-                                    <button pButton icon="pi pi-lock" [pTooltip]="rowData.isActive ? 'Ẩn':'Hiện'" tooltipPosition="bottom" (click)="inActiveBrand(rowData)"
-                                    [ngClass]="rowData.isActive ? 'p-button-rounded p-button-danger mr-2' : 'p-button-rounded p-button-info mr-2'"  
-                                   ></button>
-                                </td> 
-                            </span>
-                            <span *ngSwitchCase="'isActive'" pTooltip="{{rowData[col.field]}}" tooltipPosition="bottom">{{ rowData[col.field] }}>  
-                            </span> 
-                            <span *ngSwitchDefault pTooltip="{{rowData[col.field]}}" tooltipPosition="bottom">{{ rowData[col.field] }}</span> 
-                        </span>                   
-                        </td>
-                    </tr>
-                </ng-template>
-                
-                <ng-template pTemplate="emptymessage">
-                    <tr>
-                        <td colspan="13">No data found.</td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </div>
-        </p-accordionTab>
-</p-accordion>
+    <p-accordion>
+        <p-accordionTab header="Quản lý nhãn hàng" class="center" [selected]="true">
+            <div class="search-box">
+                <input pTooltip="Global Seach" tooltipPosition="bottom" type="text" pInputText placeholder="Tìm kiếm" 
+                matInput (input)="tdt.filterGlobal($any($event.target).value, 'contains')"/>
+            </div>  
+            <div class="displayUsers">
+                <p-table #tdt [value]="dataBrand" [columns]="brandsDataCols" responsiveLayout="scroll" class="table-content" [paginator]="true" [rows]="rows"
+                    [virtualRowHeight]="340" [paginator]="true" [showCurrentPageReport]="true" [(first)]="first"
+                    [resizableColumns]="true" [reorderableColumns]="true" [columnResizeMode]="'expand'"
+                    [globalFilterFields]="['id','brandName','description','isActive']"
+                    [rowsPerPageOptions]="[5, 10, 20]"
+                    currentPageReportTemplate="Hiển thị {first} - {last} trong tổng số {totalRecords} dữ liệu">
+                    <ng-template pTemplate="header" let-columns>
+                        <tr>
+                            <th pReorderableColumn pResizableColumn *ngFor="let col of columns"
+                                [style.width]="col.width + '%'">
+                                <span>{{ col.header }}</span>
+                            </th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-columns="columns" let-rowIndex="rowIndex" let-rowData>
+                        <tr [pSelectableRow]="rowData" [pSelectableRowIndex]="rowIndex">
+                            <td *ngFor="let col of columns">
+                            <span [ngSwitch]="col.type">
+                                <span *ngSwitchCase="'button'" class="button"> 
+                                    <td>
+                                        <button pButton icon="pi pi-pencil" pTooltip="Chỉnh sửa" tooltipPosition="bottom" class="p-button-rounded p-button-success mr-2"
+                                            (click)="openEditBrandPopup(rowData['id'])"></button>        
+                                        <button pButton icon="pi pi-lock" [pTooltip]="rowData.isActive ? 'Ẩn':'Hiện'" tooltipPosition="bottom" (click)="inActiveBrand(rowData)"
+                                        [ngClass]="rowData.isActive ? 'p-button-rounded p-button-danger mr-2' : 'p-button-rounded p-button-info mr-2'"  
+                                    ></button>
+                                    </td> 
+                                </span>
+                                <span *ngSwitchCase="'isActive'" pTooltip="{{rowData[col.field]}}" tooltipPosition="bottom">{{ rowData[col.field] }}>  
+                                </span> 
+                                <span *ngSwitchDefault pTooltip="{{rowData[col.field]}}" tooltipPosition="bottom">{{ rowData[col.field] }}</span> 
+                            </span>                   
+                            </td>
+                        </tr>
+                    </ng-template>
+                    
+                    <ng-template pTemplate="emptymessage">
+                        <tr>
+                            <td colspan="13">No data found.</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </div>
+            </p-accordionTab>
+    </p-accordion>
 
-<form [formGroup]="brandForm">
-    <p-dialog [(visible)]="displayEditBrandPopup" [style]="{width: '450px'}" header="Brand Category" [modal]="true" styleClass="p-fluid" class="profile">
-            <ng-template pTemplate="content">
-                <div *ngIf="isEdit" class="category">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Id</mat-label>
-                        <input matInput formControlName = "Id" name = "Id">                              
-                    </mat-form-field>
-                </div>
-                <div class="category">
-                    <mat-form-field appearance="outline">     
-                        <mat-label>Nhãn hàng</mat-label>
-                        <input matInput formControlName = "BrandName" name = "BrandName" required="">     
-                        <mat-error *ngIf="brandForm.get('BrandName')?.hasError('required')">
-                            Hãy nhập nhãn hàng!
-                        </mat-error>    
-                    </mat-form-field>  
-                </div>
-                <div class="category">
-                    <mat-form-field appearance="outline" required=""> 
-                        <mat-label>Mô tả</mat-label>   
-                        <input matInput formControlName = "Description" name = "Description"> 
-                        <mat-error *ngIf="brandForm.get('BrandName')?.hasError('required')">
-                            Hãy nhập mô tả!
-                        </mat-error>   
-                    </mat-form-field> 
-                </div>       
-            </ng-template>
-            <ng-template pTemplate="footer">
-                <div class="pt-2">
-                    <button *ngIf="!isEdit" pButton label="Tạo" class="p-button-rounded p-button-success" (click)="confirmForm(false)"></button>
-                    <button *ngIf="isEdit" pButton label="Lưu" class="p-button-rounded p-button-success" (click)="confirmForm(true)"></button>           
-                    <button pButton label="Huỷ" class="p-button-rounded p-button-secondary ml-1" type="button" (click)="hideEditUserPopup()"></button> 
-                </div>
-            </ng-template>
-    </p-dialog>
-</form>
-<app-footer />
+    <form [formGroup]="brandForm">
+        <p-dialog [(visible)]="displayEditBrandPopup" [style]="{width: '450px'}" header="Brand Category" [modal]="true" styleClass="p-fluid" class="profile">
+                <ng-template pTemplate="content">
+                    <div *ngIf="isEdit" class="category">
+                        <mat-form-field appearance="outline">
+                            <mat-label>Id</mat-label>
+                            <input matInput formControlName = "Id" name = "Id">                              
+                        </mat-form-field>
+                    </div>
+                    <div class="category">
+                        <mat-form-field appearance="outline">     
+                            <mat-label>Nhãn hàng</mat-label>
+                            <input matInput formControlName = "BrandName" name = "BrandName" required="">     
+                            <mat-error *ngIf="brandForm.get('BrandName')?.hasError('required')">
+                                Hãy nhập nhãn hàng!
+                            </mat-error>    
+                        </mat-form-field>  
+                    </div>
+                    <div class="category">
+                        <mat-form-field appearance="outline" required=""> 
+                            <mat-label>Mô tả</mat-label>   
+                            <input matInput formControlName = "Description" name = "Description"> 
+                            <mat-error *ngIf="brandForm.get('BrandName')?.hasError('required')">
+                                Hãy nhập mô tả!
+                            </mat-error>   
+                        </mat-form-field> 
+                    </div>       
+                </ng-template>
+                <ng-template pTemplate="footer">
+                    <div class="pt-2">
+                        <button *ngIf="!isEdit" pButton label="Tạo" class="p-button-rounded p-button-success" (click)="confirmForm(false)"></button>
+                        <button *ngIf="isEdit" pButton label="Lưu" class="p-button-rounded p-button-success" (click)="confirmForm(true)"></button>           
+                        <button pButton label="Huỷ" class="p-button-rounded p-button-secondary ml-1" type="button" (click)="hideEditUserPopup()"></button> 
+                    </div>
+                </ng-template>
+        </p-dialog>
+    </form>
+    <app-footer />
+</div>
