--- a/AngularFrontEnd/projects/features/src/app/order/order.component.scss
+++ b/AngularFrontEnd/projects/features/src/app/order/order.component.scss
@@ -1,9 +1,3 @@
-.main-order {
-  width: 100%;
-  padding: 20px;
-  background-color: #f0f3f8;
-}
-
 .card {
   width: 100%;
   background: white;
@@ -12,7 +6,7 @@
 }
 :host ::ng-deep{
   .p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link{
-    background-color: #22c55e;
+    background-color: #6f42c1;
     color: white;
     border-radius: 25px;
     height: 40px;
