--- a/AngularFrontEnd/projects/potal/src/styles.scss
+++ b/AngularFrontEnd/projects/potal/src/styles.scss
@@ -48,3 +48,6 @@
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.block {
+    padding: 0 6%;
+}
